Shell navigation attempts

--- a/WeatherApp/WA-Front/View/MainPage.xaml
+++ b/WeatherApp/WA-Front/View/MainPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="WA_Front.View.MainPage">
+             x:Class="WA_Front.View.MainPage"
+             xmlns:view="clr-namespace:WA_Front.View">
 
     <ScrollView>
         <VerticalStackLayout
@@ -33,8 +34,19 @@
                 Text="Click me"
                 SemanticProperties.Hint="Counts the number of times you click"
                 Clicked="OnCounterClicked"
+                Command="{Binding Source={x:RelativeSource AncestorType={x:Type view:MainPage}}, Path=NavigateCommand}"
+                CommandParameter="{Binding Source={x:Reference PagePicker}, Path=SelectedItem}"
                 HorizontalOptions="Center" />
 
+            <Picker x:Name="PagePicker" Title="Select Page">
+                <Picker.ItemsSource>
+                    <x:Array Type="{x:Type x:String}">
+                        <x:String>NowPage</x:String>
+                        <x:String>DailyPage</x:String>
+                        <x:String>HourlyPage</x:String>
+                    </x:Array>
+                </Picker.ItemsSource>
+            </Picker>
         </VerticalStackLayout>
     </ScrollView>
 
