--- a/WeatherApp/WA-Front/View/MasterPage.xaml
+++ b/WeatherApp/WA-Front/View/MasterPage.xaml
@@ -3,14 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:view="clr-namespace:WA_Front.View"
              xmlns:service="clr-namespace:WA_Front.Service"
-             x:Class="WA_Front.View.MasterPage"
-             x:Name="thisPage">
+             x:Class="WA_Front.View.MasterPage">
     <Grid ColumnDefinitions="Auto,*">
-        <view:NowPage Grid.Column="0"/>
-        <VerticalStackLayout Grid.Column="1" 
-                             BindableLayout.ItemsSource="{Binding Views, Source={x:Reference thisPage}}"
-                             BackgroundColor="Aquamarine">
-
-        </VerticalStackLayout>
+        <view:CurrentView Grid.Column="0"/>
+        <view:SwitchView Grid.Column="1"/>
     </Grid>
 </ContentPage>
