--- a/WeatherApp/WA-Front/AppShell.xaml
+++ b/WeatherApp/WA-Front/AppShell.xaml
@@ -6,9 +6,6 @@
     xmlns:view="clr-namespace:WA_Front.View"
     Shell.FlyoutBehavior="Disabled">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate view:MainPage}"
-        Route="MainPage" />
+    <ShellContent ContentTemplate="{DataTemplate view:MasterPage}"/>
 
 </Shell>
