--- a/WeatherApp/WA-Front/AppShell.xaml
+++ b/WeatherApp/WA-Front/AppShell.xaml
@@ -3,8 +3,7 @@
     x:Class="WA_Front.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:view="clr-namespace:WA_Front.View"
-    Shell.FlyoutBehavior="Disabled">
+    xmlns:view="clr-namespace:WA_Front.View">
 
     <ShellContent ContentTemplate="{DataTemplate view:MasterPage}"/>
 
