--- a/WeatherApp/WA-Front/View/CalendarView.xaml
+++ b/WeatherApp/WA-Front/View/CalendarView.xaml
@@ -32,14 +32,15 @@
         <controls:Expander.HeaderContent>
             <controls:HorizontalFlexLayout Spacing="10"
                                            Padding="5"
+                                           HorizontalOptions="Center"
                                            BindableLayout.ItemsSource="{Binding DailyWeather}">
                 <BindableLayout.ItemTemplate>
                     <DataTemplate>
                         <RadioButton IsChecked="{Binding IsExpanded, Source={x:Reference test}, Mode=OneWayToSource}">
                             <RadioButton.ControlTemplate>
                                 <ControlTemplate>
-                                    <Border WidthRequest="125"
-                                            HeightRequest="125">
+                                    <Border WidthRequest="150"
+                                            HeightRequest="150">
                                         <Border.StrokeShape>
                                             <RoundRectangle CornerRadius="5"/>
                                         </Border.StrokeShape>
@@ -52,18 +53,18 @@
                                             </Grid.GestureRecognizers>
                                             <Image Grid.Row="0"
                                                    Grid.Column="0"
-                                                   Source="{Binding ImageSource}"/>
+                                                   Source="p50.png"/>
                                             <Label Grid.Row="0"
                                                    Grid.Column="1"
-                                                   Text="{Binding Temperature}"/>
+                                                   Text="{Binding Time, StringFormat='{0:dd/MM/yyyy}'}"/>
                                             <Label Grid.Row="1"
                                                    Grid.Column="0"
                                                    BackgroundColor="#312D59"
-                                                   Text="{Binding RealTemperature}"/>
+                                                   Text="{Binding Temperature2MMin, StringFormat='Min: {0}°C'}"/>
                                             <Label Grid.Row="1"
                                                    Grid.Column="1"
                                                    BackgroundColor="#312D59"
-                                                   Text="{Binding Rain}"/>
+                                                   Text="{Binding Temperature2MMax, StringFormat='Max: {0}°C'}"/>
                                         </Grid>
                                     </Border>
                                 </ControlTemplate>
@@ -74,9 +75,8 @@
             </controls:HorizontalFlexLayout>
         </controls:Expander.HeaderContent>
         <controls:Expander.MainContent>
-            <Grid RowDefinitions="Auto,Auto,Auto,Auto,*"
+            <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,*"
                   BackgroundColor="{x:StaticResource Primary}"
-                  WidthRequest="200"
                   Padding="5"
                   RowSpacing="5"
                   x:Name="Content">
@@ -87,13 +87,27 @@
                     </Style>
                 </Grid.Resources>
                 <Image Grid.Row="0"
-                       Source="{Binding ImageSource}"/>
+                       Source="p50.png"/>
                 <Label Grid.Row="1"
-                       Text="{Binding Temperature, StringFormat='{0}C'}"/>
+                       Text="{Binding Temperature2MMin, StringFormat='Min: {0}°C'}"/>
                 <Label Grid.Row="2"
-                       Text="{Binding RealTemperature, StringFormat='Real {0}C'}"/>
+                       Text="{Binding Temperature2MMax, StringFormat='Max: {0}°C'}"/>
                 <Label Grid.Row="3"
-                       Text="{Binding Rain}"/>
+                       Text="{Binding Sunrise, StringFormat='Sunrise: {0}'}"/>
+                <Label Grid.Row="4"
+                       Text="{Binding Sunset, StringFormat='Sunset: {0}'}"/>
+                <Label Grid.Row="5"
+                       Text="{Binding PrecipitationSum, StringFormat='PrecipationSum: {0}'}"/>
+                <Label Grid.Row="6"
+                       Text="{Binding PrecipitationHours, StringFormat='PrecipationHours: {0}'}"/>
+                <Label Grid.Row="7"
+                       Text="{Binding Windspeed10MMax, StringFormat='WindspeedMax: {0}'}"/>
+                <Label Grid.Row="8"
+                       Text="{Binding Windgusts10MMax, StringFormat='WindgustsMax: {0}'}"/>
+                <Label Grid.Row="9"
+                       Text="{Binding Winddirection10MDominant, StringFormat='Dominantwinddirection: {0}°'}"/>
+                <Label Grid.Row="10"
+                       Text="{Binding ShortwaveRadiationSum, StringFormat='ShortwaveRadiationSum: {0}'}"/>
             </Grid>
         </controls:Expander.MainContent>
     </controls:Expander>
